syntax = "proto3";

package auth;

option go_package = "github.com/evgenivanovi/gophkeeper/api/pb/auth";

import "auth/model.proto";

// __________________________________________________

service AuthAPI {

  rpc Signin (auth.SigninRequest)
      returns (auth.SigninResponse);

  rpc Signup (auth.SignupRequest)
      returns (auth.SignupResponse);

}

// __________________________________________________